--- a/Props Refactor/index.html
+++ b/Props Refactor/index.html
@@ -21,17 +21,22 @@
 
 
       function Header({name}) {
+        return (<h1>My Name is {name ? name : "Default Name"}</h1>)
 
-        return (<h1>my name is { name ? name : 'Mukti DJ'} 🚀</h1>);
       }
 
       function HomePage() {
+        const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
         return (
           <div>
             {/* Nesting the Header component */}
-            <Header />
-            <Header name='Ukhti' />
-            <Header  />
+            <Header name="Mukti DJ"/>
+            <ul>
+                {names.map((name) => (
+                    <li key={name}>{name}</li>
+                 ))}
+
+            </ul>
 
           </div>
         );
